chore: update v3.0.0 release contents