@@ -2,9 +2,9 @@ package io.ipgeolocation.sdk;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import io.ipgeolocation.sdk.internal.HttpRequestData;
 import io.ipgeolocation.sdk.internal.ObjectMapperFactory;
 import java.net.URI;
-import java.net.http.HttpRequest;
 import java.time.Duration;
 import org.junit.jupiter.api.Test;
 
@@ -13,9 +13,7 @@ class IpGeolocationClientRequestBuildingTest {
   @Test
   void lookupBuildsExpectedQueryAndHeaders() {
     TestHttpExecutor executor = new TestHttpExecutor();
-    executor.enqueueResponse(200, """
-        {"ip":"8.8.8.8"}
-        """);
+    executor.enqueueResponse(200, "{\"ip\":\"8.8.8.8\"}");
 
     IpGeolocationClientConfig config =
         IpGeolocationClientConfig.builder("test-key")
@@ -25,7 +23,7 @@ class IpGeolocationClientRequestBuildingTest {
             .build();
 
     IpGeolocationClient client =
-        new IpGeolocationClient(config, executor, millis -> {}, ObjectMapperFactory.create());
+        new IpGeolocationClient(config, executor, ObjectMapperFactory.create());
 
     LookupIpGeolocationRequest request =
         LookupIpGeolocationRequest.builder()
@@ -39,7 +37,7 @@ class IpGeolocationClientRequestBuildingTest {
 
     client.lookupIpGeolocation(request);
 
-    HttpRequest sent = executor.capturedRequests().getFirst();
+    HttpRequestData sent = executor.capturedRequests().get(0);
     URI uri = sent.uri();
     assertThat(uri.getPath()).isEqualTo("/v3/ipgeo");
     assertThat(uri.getQuery()).contains("apiKey=test-key");
@@ -49,52 +47,48 @@ class IpGeolocationClientRequestBuildingTest {
     assertThat(uri.getQuery()).contains("fields=location.city");
     assertThat(uri.getQuery()).contains("excludes=currency");
     assertThat(uri.getQuery()).contains("output=json");
-    assertThat(sent.headers().firstValue("User-Agent")).hasValue(IpGeolocationClient.defaultUserAgent());
-    assertThat(sent.headers().firstValue("Accept")).hasValue("application/json");
-    assertThat(sent.timeout()).contains(Duration.ofSeconds(4));
+    assertThat(sent.firstHeaderValue("User-Agent")).isEqualTo(IpGeolocationClient.defaultUserAgent());
+    assertThat(sent.firstHeaderValue("Accept")).isEqualTo("application/json");
+    assertThat(sent.timeout()).isEqualTo(Duration.ofSeconds(4));
   }
 
   @Test
   void bulkLookupBuildsPayloadAndPath() {
     TestHttpExecutor executor = new TestHttpExecutor();
-    executor.enqueueResponse(200, """
-        [{"ip":"8.8.8.8"}]
-        """);
+    executor.enqueueResponse(200, "[{\"ip\":\"8.8.8.8\"}]");
 
     IpGeolocationClientConfig config = IpGeolocationClientConfig.builder("bulk-key").build();
     IpGeolocationClient client =
-        new IpGeolocationClient(config, executor, millis -> {}, ObjectMapperFactory.create());
+        new IpGeolocationClient(config, executor, ObjectMapperFactory.create());
 
     BulkLookupIpGeolocationRequest request =
         BulkLookupIpGeolocationRequest.builder().addIp("8.8.8.8").addIp("1.1.1.1").build();
 
     client.bulkLookupIpGeolocation(request);
 
-    HttpRequest sent = executor.capturedRequests().getFirst();
+    HttpRequestData sent = executor.capturedRequests().get(0);
     assertThat(sent.uri().getPath()).isEqualTo("/v3/ipgeo-bulk");
     assertThat(sent.uri().getQuery()).contains("apiKey=bulk-key");
-    assertThat(sent.headers().firstValue("Content-Type")).hasValue("application/json");
-    assertThat(sent.headers().firstValue("Accept")).hasValue("application/json");
+    assertThat(sent.firstHeaderValue("Content-Type")).isEqualTo("application/json");
+    assertThat(sent.firstHeaderValue("Accept")).isEqualTo("application/json");
+    assertThat(sent.body()).contains("\"ips\"");
   }
 
   @Test
   void lookupOmitsApiKeyWhenConfigIsBuiltWithoutApiKey() {
     TestHttpExecutor executor = new TestHttpExecutor();
-    executor.enqueueResponse(200, """
-        {"ip":"8.8.8.8"}
-        """);
+    executor.enqueueResponse(200, "{\"ip\":\"8.8.8.8\"}");
 
     IpGeolocationClient client =
         new IpGeolocationClient(
             IpGeolocationClientConfig.builder().build(),
             executor,
-            millis -> {},
             ObjectMapperFactory.create());
 
     client.lookupIpGeolocation(
         LookupIpGeolocationRequest.builder().ip("8.8.8.8").build());
 
-    HttpRequest sent = executor.capturedRequests().getFirst();
+    HttpRequestData sent = executor.capturedRequests().get(0);
     String query = sent.uri().getQuery();
     assertThat(query).doesNotContain("apiKey=");
   }
@@ -102,15 +96,12 @@ class IpGeolocationClientRequestBuildingTest {
   @Test
   void bulkLookupIncludesOptionalQueryParamsWhenConfigured() {
     TestHttpExecutor executor = new TestHttpExecutor();
-    executor.enqueueResponse(200, """
-        [{"ip":"8.8.8.8"}]
-        """);
+    executor.enqueueResponse(200, "[{\"ip\":\"8.8.8.8\"}]");
 
     IpGeolocationClient client =
         new IpGeolocationClient(
             IpGeolocationClientConfig.builder("bulk-key").build(),
             executor,
-            millis -> {},
             ObjectMapperFactory.create());
 
     client.bulkLookupIpGeolocation(
@@ -122,7 +113,7 @@ class IpGeolocationClientRequestBuildingTest {
             .excludes("currency")
             .build());
 
-    HttpRequest sent = executor.capturedRequests().getFirst();
+    HttpRequestData sent = executor.capturedRequests().get(0);
     String query = sent.uri().getQuery();
     assertThat(query).contains("apiKey=bulk-key");
     assertThat(query).contains("lang=de");
@@ -134,44 +125,38 @@ class IpGeolocationClientRequestBuildingTest {
   @Test
   void lookupTreatsBlankIpAsOmittedAndDoesNotSendIpParam() {
     TestHttpExecutor executor = new TestHttpExecutor();
-    executor.enqueueResponse(200, """
-        {"ip":"1.2.3.4"}
-        """);
+    executor.enqueueResponse(200, "{\"ip\":\"1.2.3.4\"}");
 
     IpGeolocationClient client =
         new IpGeolocationClient(
             IpGeolocationClientConfig.builder("k").build(),
             executor,
-            millis -> {},
             ObjectMapperFactory.create());
 
     client.lookupIpGeolocation(
         LookupIpGeolocationRequest.builder().ip("   ").build());
 
-    HttpRequest sent = executor.capturedRequests().getFirst();
+    HttpRequestData sent = executor.capturedRequests().get(0);
     assertThat(sent.uri().getQuery()).doesNotContain("ip=");
   }
 
   @Test
   void sdkManagedHeadersAreSetByDefault() {
     TestHttpExecutor executor = new TestHttpExecutor();
-    executor.enqueueResponse(200, """
-        {"ip":"8.8.8.8"}
-        """);
+    executor.enqueueResponse(200, "{\"ip\":\"8.8.8.8\"}");
 
     IpGeolocationClient client =
         new IpGeolocationClient(
             IpGeolocationClientConfig.builder("k").build(),
             executor,
-            millis -> {},
             ObjectMapperFactory.create());
 
     client.lookupIpGeolocation(
         LookupIpGeolocationRequest.builder().ip("8.8.8.8").build());
 
-    HttpRequest sent = executor.capturedRequests().getFirst();
-    assertThat(sent.headers().firstValue("User-Agent")).hasValue(IpGeolocationClient.defaultUserAgent());
-    assertThat(sent.headers().firstValue("Accept")).hasValue("application/json");
+    HttpRequestData sent = executor.capturedRequests().get(0);
+    assertThat(sent.firstHeaderValue("User-Agent")).isEqualTo(IpGeolocationClient.defaultUserAgent());
+    assertThat(sent.firstHeaderValue("Accept")).isEqualTo("application/json");
   }
 
   @Test
@@ -185,15 +170,12 @@ class IpGeolocationClientRequestBuildingTest {
   @Test
   void lookupRequestUserAgentOverridesSdkDefaultUserAgent() {
     TestHttpExecutor executor = new TestHttpExecutor();
-    executor.enqueueResponse(200, """
-        {"ip":"8.8.8.8"}
-        """);
+    executor.enqueueResponse(200, "{\"ip\":\"8.8.8.8\"}");
 
     IpGeolocationClient client =
         new IpGeolocationClient(
             IpGeolocationClientConfig.builder("k").build(),
             executor,
-            millis -> {},
             ObjectMapperFactory.create());
 
     client.lookupIpGeolocation(
@@ -202,22 +184,19 @@ class IpGeolocationClientRequestBuildingTest {
             .userAgent("python-requests/2.32.5")
             .build());
 
-    HttpRequest sent = executor.capturedRequests().getFirst();
-    assertThat(sent.headers().firstValue("User-Agent")).hasValue("python-requests/2.32.5");
+    HttpRequestData sent = executor.capturedRequests().get(0);
+    assertThat(sent.firstHeaderValue("User-Agent")).isEqualTo("python-requests/2.32.5");
   }
 
   @Test
   void bulkRequestUserAgentOverridesSdkDefaultUserAgent() {
     TestHttpExecutor executor = new TestHttpExecutor();
-    executor.enqueueResponse(200, """
-        [{"ip":"8.8.8.8"}]
-        """);
+    executor.enqueueResponse(200, "[{\"ip\":\"8.8.8.8\"}]");
 
     IpGeolocationClient client =
         new IpGeolocationClient(
             IpGeolocationClientConfig.builder("k").build(),
             executor,
-            millis -> {},
             ObjectMapperFactory.create());
 
     client.bulkLookupIpGeolocation(
@@ -226,8 +205,8 @@ class IpGeolocationClientRequestBuildingTest {
             .userAgent("python-requests/2.32.5")
             .build());
 
-    HttpRequest sent = executor.capturedRequests().getFirst();
-    assertThat(sent.headers().firstValue("User-Agent")).hasValue("python-requests/2.32.5");
+    HttpRequestData sent = executor.capturedRequests().get(0);
+    assertThat(sent.firstHeaderValue("User-Agent")).isEqualTo("python-requests/2.32.5");
   }
 
   @Test
@@ -239,7 +218,6 @@ class IpGeolocationClientRequestBuildingTest {
         new IpGeolocationClient(
             IpGeolocationClientConfig.builder("k").build(),
             executor,
-            millis -> {},
             ObjectMapperFactory.create());
 
     client.lookupIpGeolocationRaw(
@@ -248,9 +226,9 @@ class IpGeolocationClientRequestBuildingTest {
             .output(ResponseFormat.XML)
             .build());
 
-    HttpRequest sent = executor.capturedRequests().getFirst();
+    HttpRequestData sent = executor.capturedRequests().get(0);
     assertThat(sent.uri().getQuery()).contains("output=xml");
-    assertThat(sent.headers().firstValue("Accept")).hasValue("application/xml");
+    assertThat(sent.firstHeaderValue("Accept")).isEqualTo("application/xml");
   }
 
   @Test
@@ -262,7 +240,6 @@ class IpGeolocationClientRequestBuildingTest {
         new IpGeolocationClient(
             IpGeolocationClientConfig.builder("k").build(),
             executor,
-            millis -> {},
             ObjectMapperFactory.create());
 
     client.bulkLookupIpGeolocationRaw(
@@ -271,8 +248,8 @@ class IpGeolocationClientRequestBuildingTest {
             .output(ResponseFormat.XML)
             .build());
 
-    HttpRequest sent = executor.capturedRequests().getFirst();
+    HttpRequestData sent = executor.capturedRequests().get(0);
     assertThat(sent.uri().getQuery()).contains("output=xml");
-    assertThat(sent.headers().firstValue("Accept")).hasValue("application/xml");
+    assertThat(sent.firstHeaderValue("Accept")).isEqualTo("application/xml");
   }
 }
